# PLCForge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  vendor_support.md
.github/workflows/: auto-assign.yml  auto-label.yml  auto-merge.yml  ci.yml  pr-size-label.yml  pr-validation.yml  release.yml  stale.yml  welcome.yml
docs/: PR_MANAGEMENT.md
docs/plans/: 2026-01-10-plcforge-design.md
plcforge/: __init__.py  main.py
plcforge/ai/: CLAUDE.md  __init__.py  code_generator.py
plcforge/drivers/: CLAUDE.md  base.py
plcforge/drivers/allen_bradley/: __init__.py  cip_driver.py
plcforge/drivers/beckhoff/: __init__.py  ads_driver.py
plcforge/drivers/delta/: __init__.py  modbus_driver.py
plcforge/drivers/mitsubishi/: __init__.py  mc_protocol.py
plcforge/drivers/omron/: __init__.py  fins_driver.py
plcforge/drivers/schneider/: __init__.py  modbus_driver.py
plcforge/drivers/siemens/: __init__.py  project_parser.py  s7comm.py
plcforge/gui/: CLAUDE.md  __init__.py  main_window.py
plcforge/gui/themes/: __init__.py  syntax_highlighter.py  theme_manager.py
plcforge/pal/: CLAUDE.md  __init__.py  unified_api.py
plcforge/recovery/: __init__.py  engine.py
plcforge/recovery/file_parsers/: __init__.py  tia_portal.py
plcforge/recovery/vulnerabilities/: __init__.py  siemens_s7_1200.py  siemens_s7_300.py  siemens_s7_400.py
plcforge/security/: CLAUDE.md  __init__.py  audit_log.py  network_scanner.py
plcforge/utils/: CLAUDE.md  __init__.py  trend_logger.py
tests/: __init__.py  conftest.py  test_ai.py  test_drivers.py  test_gui_integration.py  test_new_features.py  test_pal.py  test_pal_monitoring.py  test_recovery.py
